iml-services/iml-device/src/snapshots/iml_device__linux_plugin_transforms__tests__devtree2linuxoutput_dataset.snap
---
source: iml-services/iml-device/src/linux_plugin_transforms.rs
expression: data
---
{
  "devs": {
    "253:0": {
      "major_minor": "253:0",
      "parent": null,
      "partition_number": null,
      "path": "/dev/mapper/mpatha",
      "paths": [
        "/dev/mapper/mpatha",
        "/dev/disk/by-id/dm-name-mpatha",
        "/dev/disk/by-id/dm-uuid-mpath-36001405ecca605408894bc2aa708a09c",
        "/dev/disk/by-label/mgs",
        "/dev/disk/by-uuid/3383432994541088053",
        "/dev/dm-0",
        "/dev/mgt"
      ],
      "serial_83": "36001405ecca605408894bc2aa708a09c",
      "serial_80": "SLIO-ORG mgt1            ecca6054-0889-4bc2-aa70-8a09cd7d63a8",
      "size": 536870912,
      "filesystem_type": "zfs_member"
    },
    "253:1": {
      "major_minor": "253:1",
      "parent": null,
      "partition_number": null,
      "path": "/dev/mapper/mpathb",
      "paths": [
        "/dev/mapper/mpathb",
        "/dev/disk/by-id/dm-name-mpathb",
        "/dev/disk/by-id/dm-uuid-mpath-36001405943dd5f394fb4b5ba71ec818f",
        "/dev/disk/by-label/mds",
        "/dev/disk/by-uuid/15259234345131681652",
        "/dev/dm-1",
        "/dev/mdt"
      ],
      "serial_83": "36001405943dd5f394fb4b5ba71ec818f",
      "serial_80": "SLIO-ORG mdt1            943dd5f3-94fb-4b5b-a71e-c818f04b201c",
      "size": 5368709120,
      "filesystem_type": "zfs_member"
    },
    "8:0": {
      "major_minor": "8:0",
      "parent": null,
      "partition_number": null,
      "path": "/dev/disk/by-id/ata-VBOX_HARDDISK_VB289a63d7-b2394fde",
      "paths": [
        "/dev/disk/by-id/ata-VBOX_HARDDISK_VB289a63d7-b2394fde",
        "/dev/disk/by-path/pci-0000:00:01.1-ata-1.0",
        "/dev/sda"
      ],
      "serial_83": "1ATA     VBOX HARDDISK                           VB289a63d7-b2394fde",
      "serial_80": "SATA     VBOX HARDDISK   VB289a63d7-b2394fde",
      "size": 42949672960,
      "filesystem_type": null
    },
    "8:1": {
      "major_minor": "8:1",
      "parent": "8:0",
      "partition_number": 1,
      "path": "/dev/disk/by-id/ata-VBOX_HARDDISK_VB289a63d7-b2394fde-part1",
      "paths": [
        "/dev/disk/by-id/ata-VBOX_HARDDISK_VB289a63d7-b2394fde-part1",
        "/dev/disk/by-path/pci-0000:00:01.1-ata-1.0-part1",
        "/dev/disk/by-uuid/f52f361a-da1a-4ea0-8c7f-ca2706e86b46",
        "/dev/sda1"
      ],
      "serial_83": null,
      "serial_80": null,
      "size": 42948624384,
      "filesystem_type": "xfs"
    },
    "8:16": {
      "major_minor": "8:16",
      "parent": null,
      "partition_number": null,
      "path": "/dev/disk/by-id/scsi-36001405ecca605408894bc2aa708a09c",
      "paths": [
        "/dev/disk/by-id/scsi-36001405ecca605408894bc2aa708a09c",
        "/dev/disk/by-id/wwn-0x6001405ecca605408894bc2aa708a09c",
        "/dev/disk/by-path/ip-10.73.40.10:3260-iscsi-iqn.2015-01.com.whamcloud.lu:mds-lun-0",
        "/dev/disk/by-label/mgs",
        "/dev/disk/by-uuid/3383432994541088053",
        "/dev/mgt",
        "/dev/sdb"
      ],
      "serial_83": "36001405ecca605408894bc2aa708a09c",
      "serial_80": "SLIO-ORG mgt1            ecca6054-0889-4bc2-aa70-8a09cd7d63a8",
      "size": 536870912,
      "filesystem_type": "mpath_member"
    },
    "8:32": {
      "major_minor": "8:32",
      "parent": null,
      "partition_number": null,
      "path": "/dev/disk/by-id/scsi-36001405ecca605408894bc2aa708a09c",
      "paths": [
        "/dev/disk/by-id/scsi-36001405ecca605408894bc2aa708a09c",
        "/dev/disk/by-id/wwn-0x6001405ecca605408894bc2aa708a09c",
        "/dev/disk/by-path/ip-10.73.50.10:3260-iscsi-iqn.2015-01.com.whamcloud.lu:mds-lun-0",
        "/dev/disk/by-label/mgs",
        "/dev/disk/by-uuid/3383432994541088053",
        "/dev/mgt",
        "/dev/sdc"
      ],
      "serial_83": "36001405ecca605408894bc2aa708a09c",
      "serial_80": "SLIO-ORG mgt1            ecca6054-0889-4bc2-aa70-8a09cd7d63a8",
      "size": 536870912,
      "filesystem_type": "mpath_member"
    },
    "8:48": {
      "major_minor": "8:48",
      "parent": null,
      "partition_number": null,
      "path": "/dev/disk/by-id/scsi-36001405943dd5f394fb4b5ba71ec818f",
      "paths": [
        "/dev/disk/by-id/scsi-36001405943dd5f394fb4b5ba71ec818f",
        "/dev/disk/by-id/wwn-0x6001405943dd5f394fb4b5ba71ec818f",
        "/dev/disk/by-path/ip-10.73.40.10:3260-iscsi-iqn.2015-01.com.whamcloud.lu:mds-lun-1",
        "/dev/disk/by-label/mds",
        "/dev/disk/by-uuid/15259234345131681652",
        "/dev/mdt",
        "/dev/sdd"
      ],
      "serial_83": "36001405943dd5f394fb4b5ba71ec818f",
      "serial_80": "SLIO-ORG mdt1            943dd5f3-94fb-4b5b-a71e-c818f04b201c",
      "size": 5368709120,
      "filesystem_type": "mpath_member"
    },
    "8:64": {
      "major_minor": "8:64",
      "parent": null,
      "partition_number": null,
      "path": "/dev/disk/by-id/scsi-36001405943dd5f394fb4b5ba71ec818f",
      "paths": [
        "/dev/disk/by-id/scsi-36001405943dd5f394fb4b5ba71ec818f",
        "/dev/disk/by-id/wwn-0x6001405943dd5f394fb4b5ba71ec818f",
        "/dev/disk/by-path/ip-10.73.50.10:3260-iscsi-iqn.2015-01.com.whamcloud.lu:mds-lun-1",
        "/dev/disk/by-label/mds",
        "/dev/disk/by-uuid/15259234345131681652",
        "/dev/mdt",
        "/dev/sde"
      ],
      "serial_83": "36001405943dd5f394fb4b5ba71ec818f",
      "serial_80": "SLIO-ORG mdt1            943dd5f3-94fb-4b5b-a71e-c818f04b201c",
      "size": 5368709120,
      "filesystem_type": "mpath_member"
    },
    "zfsset:16140917920099960924": {
      "block_device": "zfsset:16140917920099960924",
      "drives": [
        "253:0"
      ],
      "name": "mgs/MGS",
      "path": "mgs/MGS",
      "size": 520093696,
      "uuid": 16140917920099960924
    }
  },
  "local_fs": {
    "8:1": [
      "/",
      "xfs"
    ]
  },
  "mpath": {
    "mpatha": {
      "name": "mpatha",
      "block_device": "253:0",
      "nodes": [
        {
          "major_minor": "8:16",
          "parent": null,
          "partition_number": null,
          "path": "/dev/disk/by-id/scsi-36001405ecca605408894bc2aa708a09c",
          "paths": [
            "/dev/disk/by-id/scsi-36001405ecca605408894bc2aa708a09c",
            "/dev/disk/by-id/wwn-0x6001405ecca605408894bc2aa708a09c",
            "/dev/disk/by-path/ip-10.73.40.10:3260-iscsi-iqn.2015-01.com.whamcloud.lu:mds-lun-0",
            "/dev/disk/by-label/mgs",
            "/dev/disk/by-uuid/3383432994541088053",
            "/dev/mgt",
            "/dev/sdb"
          ],
          "serial_83": "36001405ecca605408894bc2aa708a09c",
          "serial_80": "SLIO-ORG mgt1            ecca6054-0889-4bc2-aa70-8a09cd7d63a8",
          "size": 536870912,
          "filesystem_type": "mpath_member"
        },
        {
          "major_minor": "8:32",
          "parent": null,
          "partition_number": null,
          "path": "/dev/disk/by-id/scsi-36001405ecca605408894bc2aa708a09c",
          "paths": [
            "/dev/disk/by-id/scsi-36001405ecca605408894bc2aa708a09c",
            "/dev/disk/by-id/wwn-0x6001405ecca605408894bc2aa708a09c",
            "/dev/disk/by-path/ip-10.73.50.10:3260-iscsi-iqn.2015-01.com.whamcloud.lu:mds-lun-0",
            "/dev/disk/by-label/mgs",
            "/dev/disk/by-uuid/3383432994541088053",
            "/dev/mgt",
            "/dev/sdc"
          ],
          "serial_83": "36001405ecca605408894bc2aa708a09c",
          "serial_80": "SLIO-ORG mgt1            ecca6054-0889-4bc2-aa70-8a09cd7d63a8",
          "size": 536870912,
          "filesystem_type": "mpath_member"
        }
      ]
    },
    "mpathb": {
      "name": "mpathb",
      "block_device": "253:1",
      "nodes": [
        {
          "major_minor": "8:48",
          "parent": null,
          "partition_number": null,
          "path": "/dev/disk/by-id/scsi-36001405943dd5f394fb4b5ba71ec818f",
          "paths": [
            "/dev/disk/by-id/scsi-36001405943dd5f394fb4b5ba71ec818f",
            "/dev/disk/by-id/wwn-0x6001405943dd5f394fb4b5ba71ec818f",
            "/dev/disk/by-path/ip-10.73.40.10:3260-iscsi-iqn.2015-01.com.whamcloud.lu:mds-lun-1",
            "/dev/disk/by-label/mds",
            "/dev/disk/by-uuid/15259234345131681652",
            "/dev/mdt",
            "/dev/sdd"
          ],
          "serial_83": "36001405943dd5f394fb4b5ba71ec818f",
          "serial_80": "SLIO-ORG mdt1            943dd5f3-94fb-4b5b-a71e-c818f04b201c",
          "size": 5368709120,
          "filesystem_type": "mpath_member"
        },
        {
          "major_minor": "8:64",
          "parent": null,
          "partition_number": null,
          "path": "/dev/disk/by-id/scsi-36001405943dd5f394fb4b5ba71ec818f",
          "paths": [
            "/dev/disk/by-id/scsi-36001405943dd5f394fb4b5ba71ec818f",
            "/dev/disk/by-id/wwn-0x6001405943dd5f394fb4b5ba71ec818f",
            "/dev/disk/by-path/ip-10.73.50.10:3260-iscsi-iqn.2015-01.com.whamcloud.lu:mds-lun-1",
            "/dev/disk/by-label/mds",
            "/dev/disk/by-uuid/15259234345131681652",
            "/dev/mdt",
            "/dev/sde"
          ],
          "serial_83": "36001405943dd5f394fb4b5ba71ec818f",
          "serial_80": "SLIO-ORG mdt1            943dd5f3-94fb-4b5b-a71e-c818f04b201c",
          "size": 5368709120,
          "filesystem_type": "mpath_member"
        }
      ]
    }
  },
  "vgs": {},
  "lvs": {},
  "zfspools": {},
  "zfsdatasets": {
    "16140917920099960924": {
      "block_device": "zfsset:16140917920099960924",
      "drives": [
        "253:0"
      ],
      "name": "mgs/MGS",
      "path": "mgs/MGS",
      "size": 520093696,
      "uuid": 16140917920099960924
    }
  }
}
